# ShapeUp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO_HISTORY.txt
include/: SDFCreator.h  SDFCreatorGui.h  SDFObject.h  SDFTypes.h  SDFUtil.h  ShaderLoader.h  Vertex.h  imconfig.h
src/: SDFCreator.cpp  SDFCreatorGui.cpp  SDFObject.cpp  ShaderLoader.cpp  main.cpp  selection.fs  shader.cpp  shader.h  shader_base.fs  shader_prefix.fs  slicer_body.fs
